--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,5 +3,5 @@ headless = true
 port = 10000
 
 [browser]
-serverAddress = "0.0.0.0"
+# serverAddress = "0.0.0.0" deje comentada esta opcion ya que la aplicacion streamlit no iniciaba
 serverPort = 10000
